<resources>
    <string name="app_name" translatable="false">Blog</string>
    <string name="appversion_semantic" translatable="false">1.6.3</string>

    <string name="versionInfoText">Thanks for updating!\nNew in version 1.6.3:\n&#8211;Fix crash when hiding appbar (thanks to @Domi04151309)\n&#8211;Add new menu items (thanks to @Domi04151309)\n&#8211;Stop reloading when screen size changes</string>
    <string name="introInfoText">Thanks for installing!\nJust connect your phone as you would on your computer.\nTo lock and unlock the keyboard, use the keyboard button top right. Your settings will be saved.</string>
    <string name="aboutText">WhatsappWeb To Go\n\nby Leonhard Künzler\nBasetwo GbR\nandroid@kuenzler.io\n\ngithub.com/92lleo/WhatsappWebToGo\n\n© 2017&#8211;2020\n\nv1.6.3\n\nThis app is in no way affiliated with WhatsApp Inc. The rights for WhatsApp and WhatsApp Web belong to WhatsApp Inc. This app is a private project to enable the use of WhatsApp Web on Android Devices</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="one">Blogger</string>
    <string name="two">Gmail</string>
    <string name="three">Search</string>
    <string name="four">Drive</string>
    <string name="five">Starred</string>
    <string name="six">YouTube</string>
    <string name="seven">Photos</string>
    <string name="sidebar_button_toggle_appbar_visibility">Toggle Appbar Visibility</string>
    <string name="sidebar_button_toggle_dark_mode">Toggle Dark Mode</string>
    <string name="sidebar_button_about">About</string>
    <string name="sidebar_title_settings">Settings</string>
    <string name="sidebar_button_settings">@string/sidebar_title_settings</string>
    <string name="appbar_button_scroll_left">Scroll left</string>
    <string name="appbar_title_scroll_right">Scroll right</string>
    <string name="appbar_button_toggle_keyboard">Toggle keyboard</string>
</resources>
