<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/one"
            android:icon="@drawable/ic_reload"
            android:title="@string/one" />
        <item
            android:id="@+id/two"
            android:icon="@drawable/ic_reload"
            android:title="@string/two" />
        <item
            android:id="@+id/three"
            android:icon="@drawable/ic_reload"
            android:title="@string/three" />
        <item
            android:id="@+id/four"
            android:icon="@drawable/ic_reload"
            android:title="@string/four" />
        <item
            android:id="@+id/five"
            android:icon="@drawable/ic_reload"
            android:title="@string/five" />
        <item
            android:id="@+id/six"
            android:icon="@drawable/ic_reload"
            android:title="@string/six" />
        <item
            android:id="@+id/seven"
            android:icon="@drawable/ic_reload"
            android:title="@string/seven" />

    </group>


    <item android:title="@string/sidebar_title_settings">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:enabled="false"
                android:icon="@drawable/ic_manage"
                android:title="@string/sidebar_button_settings"
                android:visible="false" />
        </menu>
    </item>
</menu>
